# jetson-nano-ha-mqtt

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
src/JetsonNanoHaMqtt/: JetsonNanoHaMqtt.py  NanoMqttCamera.py  NanoMqttHardwareSensors.py  NanoMqttInference.py  __init__.py
src/JetsonNanoHaMqtt/mqtt/: MQTTCamera.py  MQTTText.py
