[project]
name = "jetson-nano-ha-mqtt"
version = "0.0.1"
authors = [
  { name="higherpass", email="fake@email.com" },
]
description = "Home Assistant MQTT for Jetson Nano"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/higherpass/jetson-nano-ha-mqtt"
"Bug Tracker" = "https://github.com/higherpass/jetson-nano-ha-mqtt/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]   # PEP 508 specifications.
build-backend = "setuptools.build_meta"

