[metadata]
name = jetson-nano-ha-mqtt
version = 0.0.1
author = higherpass
description = Home Assistant MQTT for Jetson Nano

[options]
package_dir=
    =src
packages=find:

install_requires =
    jetson_stats==4.1.4
    homeassistant-mqtt-binding==1.0.4
    paho-mqtt
    Pillow==8.4.0

[options.packages.find]
where=src